Restyled image elements on meditation page and fixed container spacing on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,17 @@ body {
 /*Styling for the title header */
 
 #main-page-header {
+  background-image: url(/assets/images/rippled-water.jpeg);
+  background-size: cover; /* Stretch to cover without blurring */
+  background-repeat: no-repeat;
+  background-position: center; /* Center the image horizontally and vertically */
   text-align: center;
   font-family: 'Bungee Spice', cursive;
   font-size: 30px;
   border: 4px solid #db2323;
   border-style: double;
-
 }
+
 
 /* Styling for the Main Navigation Bar across site */
 
@@ -77,6 +81,7 @@ body {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box; /* Add this to include padding in the width */
 }
 
 img {
@@ -87,7 +92,6 @@ img {
 }
 
 p {
-  
   line-height: 1.6;
 }
 
@@ -124,6 +128,8 @@ p {
 /* Styling for the timer messages */
 .message {
   background-image: url(/assets/images/stones-water.jpeg);
+  background-repeat: no-repeat;
+  background-size: cover;
   font-size: 60px;
   font-family: 'Bayon', sans-serif;
   text-align: center;
